Task #EC2-SYNC: EC2 deployed source snapshot
